--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,7 @@ php:
     - 5.4
     - 5.5
     - 5.6
+
+before_script:
+    - wget http://getcomposer.org/composer.phar
+    - php composer install --dev --no-interaction
