error in travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ php:
 
 before_script:
     - wget http://getcomposer.org/composer.phar
-    - php composer install --dev --no-interaction
+    - php composer.phar install --dev --no-interaction
